melhorias no template dashboard

--- a/public/assets/scss/soft-ui-dashboard/_variables.scss
+++ b/public/assets/scss/soft-ui-dashboard/_variables.scss
@@ -53,8 +53,8 @@ $colors: (
 ) !default;
 // scss-docs-end colors-map
 
-$primary:       #cb0c9f !default;
-$secondary:     #8392AB !default;
+$primary:       #307982 !default;
+$secondary:     #ADD05B !default;
 $info:          #17c1e8 !default;
 $success:       #82d616 !default;
 $warning:       #fbcf33 !default;
